<resources>
    <string name="app_name">Hungerbite</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="lunch">Lunch</string>
    <string name="dinner">Dinner</string>
    <string name="breakfast">Breakfast</string>
    <string name="dessert">Dessert</string>
    <string name="item_name">Item Name</string>
    <string name="enter_name">Enter name</string>
    <string name="item_price">Item Price</string>
    <string name="enter_price">Enter Price</string>
    <string name="name_and_price">Name and Price</string>
    <string name="food_time">Food Time</string>
    <string name="category">Category</string>
    <string name="enter_category">Enter Category</string>
    <string name="item_category">Item Category</string>
    <string name="photo_upload">Photo Upload</string>
    <string name="add_item">Add Item</string>
    <string name="my_bucket">My Bucket</string>
    <string name="place_order">Place Order</string>
    <string name="payment_method">Payment Method</string>
    <string name="new_request">New Request</string>
    <string name="approved_request">Approved Request</string>
    <string name="delivered_request">Delivered Request</string>
    <string name="edit_item">Edit Item</string>
    <string name="edit">Edit</string>
    <string name="default_notification_channel_id" translatable="false">fcm_default_channel</string>
    <string-array name="location">
        <item>Badda</item>
        <item>Mirpur</item>
        <item>Bashundara</item>
        <item>Banani</item>
        <item>Baridhara</item>
        <item>Farmgate</item>
        <item>Gulshan</item>
        <item>Jatrabari</item>
        <item>Khilkhet</item>
    </string-array>
</resources>