<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#f6f6f6"
    tools:context=".feature.chef.addfood.fragment.FragmentAddItem">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:paddingBottom="100dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:textColor="#3E4462"
                android:textStyle="bold"
                android:text="@string/name_and_price"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/white_drawable_rounded"
                android:layout_marginTop="10dp"
                android:padding="16dp"
                android:orientation="vertical">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="#2D9CDB"
                    android:text="@string/item_name" />
                <EditText
                    android:id="@+id/etName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@android:color/transparent"
                    android:paddingTop="5dp"
                    android:paddingBottom="5dp"
                    android:hint="@string/enter_name"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="#2D9CDB"
                    android:layout_marginTop="5dp"
                    android:text="@string/item_price"/>
                <EditText
                    android:id="@+id/etPrice"
                    android:layout_width="match_parent"
                    android:hint="@string/enter_price"
                    android:layout_marginTop="10dp"
                    android:background="@android:color/transparent"
                    android:layout_height="wrap_content"/>
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/item_category"
                android:textColor="#3E4462"
                android:textSize="20sp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/white_drawable_rounded"
                android:layout_marginTop="10dp"
                android:padding="16dp"
                android:orientation="vertical">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="#2D9CDB"
                    android:text="@string/food_time" />
                <RadioGroup
                    android:id="@+id/rgFoodTime"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <RadioButton
                        android:id="@+id/rbLunch"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/lunch"/>
                    <RadioButton
                        android:id="@+id/rbDinner"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/dinner"/>
                    <RadioButton
                        android:id="@+id/rbBreakfast"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/breakfast"/>
                    <RadioButton
                        android:id="@+id/rbDesert"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/dessert"/>
                </RadioGroup>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="#2D9CDB"
                    android:layout_marginTop="5dp"
                    android:text="@string/category"/>
                <EditText
                    android:id="@+id/etCategory"
                    android:layout_width="match_parent"
                    android:hint="@string/enter_category"
                    android:layout_marginTop="10dp"
                    android:background="@android:color/transparent"
                    android:layout_height="wrap_content"/>
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:orientation="vertical">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:textColor="#3E4462"
                android:textStyle="bold"
                android:text="@string/photo_upload"/>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/white_drawable_rounded"
                android:layout_marginTop="10dp"
                android:padding="16dp"
                android:orientation="horizontal">
                <ImageView
                    android:id="@+id/ivItemPhoto"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:src="@mipmap/ic_launcher"/>
                <ImageView
                    android:id="@+id/ivPhotoAdd"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:src="@drawable/ic_camera"/>
            </RelativeLayout>
        </LinearLayout>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btEditItem"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/button_background"
            android:textColor="@color/white"
            android:layout_marginTop="20dp"
            android:text="@string/edit_item" />
    </LinearLayout>

</ScrollView>